[package]
name = "arduino-leonardo"
version = "0.1.3"
authors = ["Rahix <rahix@rahix.de>"]
description = "Board Support Crate for Arduino Leonardo"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/arduino-leonardo"
repository = "https://github.com/Rahix/arduino-leonardo"
readme = "README.md"

keywords = ["atmega", "avr", "arduino", "hal", "leonardo"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
docs = ["atmega32u4-hal/docs"]

[dependencies]
atmega32u4 = "0.1.3"
atmega32u4-hal = "0.1.4"

[profile.dev]
codegen-units = 1
lto = true
incremental = false

[profile.release]
codegen-units = 1
lto = true
incremental = false

[package.metadata.docs.rs]
features = ["docs"]
